[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/Player.res" type="SpriteFrames" id=2]
[ext_resource path="res://src/Actors/Weapon.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/BaseCamera.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/bar_outline.png" type="Texture" id=5]
[ext_resource path="res://sprites/hp_bar.png" type="Texture" id=6]
[ext_resource path="res://sprites/mp_bar.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.3726, 12.1602 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.89078, 12.3715 )

[sub_resource type="Animation" id=3]
resource_name = "hit_reaction"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 17
collision_mask = 8
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 2 )
animation = "Idle"
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AutoAttack" type="Node2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AttackTimer" type="Timer" parent="AutoAttack"]
wait_time = 0.6
one_shot = true
autostart = true

[node name="HitBox" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
modulate = Color( 0.258824, 0.2, 0.2, 1 )
position = Vector2( 0, -0.078743 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit_reaction = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -13.0
margin_top = -28.0
margin_right = 12.0
margin_bottom = -14.0
text = "VEl"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
visible = false
margin_left = -21.0
margin_top = 13.0
margin_right = 19.0
margin_bottom = 27.0
text = "10"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Camera2D" parent="." instance=ExtResource( 4 )]

[node name="Bars" type="VBoxContainer" parent="."]
margin_left = -8.0
margin_top = 13.0
margin_right = 56.0
margin_bottom = 41.0
rect_scale = Vector2( 0.25, 0.3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP" type="TextureProgress" parent="Bars"]
margin_right = 64.0
margin_bottom = 12.0
value = 50.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MP" type="TextureProgress" parent="Bars"]
margin_top = 16.0
margin_right = 64.0
margin_bottom = 28.0
value = 50.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 7 )
[connection signal="timeout" from="AutoAttack/AttackTimer" to="." method="_on_attack_timer_timeout"]
